@@ -36,7 +36,7 @@ if ( ! empty ( $BOLD_DAYS_IN_YEAR ) && $BOLD_DAYS_IN_YEAR == 'Y' ) {
 }
 
 $startdate = mktime ( 0, 0, 0, $thismonth, 0, $thisyear );
-$enddate = mktime ( 0, 0, 0, $thismonth +1 , 1, $thisyear );
+$enddate = mktime ( 23, 59, 59, $thismonth +1 , 0, $thisyear );
 
 $smallTasks = $unapprovedStr = $printerStr = '';
 
